--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
             <div class="slideshow-container">
                 <div class="slide">
                     <img src="https://images.unsplash.com/photo-1511285560929-80b456fea0bc?ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="Bride holding bouquet">
-                    <div class="slide-caption">Elegant bridal portraits</div>
+                    <div class="slide-caption"></div>
                 </div>
                 <div class="slide">
                     <img src="https://images.unsplash.com/photo-1519225421980-715cb0215aed?ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="Wedding couple kissing">
-                    <div class="slide-caption">Capturing intimate moments</div>
+                    <div class="slide-caption"></div>
                 </div>
                 <div class="slide">
                     <img src="https://images.unsplash.com/photo-1465495976277-4387d4b0b4c6?ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="Bride and groom dancing">
-                    <div class="slide-caption">First dance as newlyweds</div>
+                    <div class="slide-caption"></div>
                 </div>
                 <div class="slide">
                     <img src="https://images.unsplash.com/photo-1509927083803-4bd519298ac4?ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="Couple walking in garden">
-                    <div class="slide-caption">Romantic garden strolls</div>
+                    <div class="slide-caption"></div>
                 </div>
             </div>
             <div class="slideshow-nav">
@@ -81,18 +81,27 @@
                 <div class="service-list">
                     <div class="service-item">
                         <i>📸</i>
-                        <h3>Wedding Day Coverage</h3>
+                        <h3>Wedding</h3>
                         <p>Full-day photography of your entire wedding celebration.</p>
+                        <button type="submit">See More</button>
                     </div>
                     <div class="service-item">
                         <i>💑</i>
-                        <h3>Engagement Sessions</h3>
+                        <h3>Portfolio</h3>
                         <p>Capture your love story before the big day.</p>
+                        <button type="submit">See More</button>
                     </div>
                     <div class="service-item">
                         <i>📘</i>
-                        <h3>Custom Albums</h3>
+                        <h3>Events</h3>
                         <p>Beautifully designed albums to showcase your memories.</p>
+                        <button type="submit">See More</button>
+                    </div>
+                    <div class="service-item">
+                        <i>📘</i>
+                        <h3>Products</h3>
+                        <p>Beautifully designed albums to showcase your memories.</p>
+                        <button type="submit">See More</button>
                     </div>
                 </div>
             </div>
